# top15words

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  build.cmd  conanfile.py  readme.md  sample3.txt  sample4.txt  sample5.txt
src/: Applet.cpp  Applet.h  CMakeLists.txt  Main.cpp  qml.qrc
src/domain/: DataModel.cpp  DataModel.h  WordSet.h  WordsProvider.cpp  WordsProvider.h
src/ui/: FilePathEditor.qml  MainWindow.qml  qml.qrc
